--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             </div>
                         </div>
                         <div class="blog-content" data-aos="fade-in" data-aos-delay="200">
-                            <img src="assets/Blog-post/blo-3.jpg" alt="post-1">
+                            <img src="./assets/Blog-post/blo-3.jpg" alt="post-1">
                             <div class="blog-title">
                                 <h3>Delivery bot</h3>
                                 <button class="btn btn-blog">AMR</button>
