--- a/index.html
+++ b/index.html
@@ -196,9 +196,8 @@ introductory workbooks.
                     <div class="pagination flex-row">
                         <a href="#"><i class="fas fa-chevron-left"></i></a>
                         <a href="#" class="pages">1</a>
-                        <a href="#" class="pages">2</a>
-                        <a href="#" class="pages">3</a>
-                        <a href="#"><i class="fas fa-chevron-right"></i></a>
+                        <a href="2.html" class="pages">2</a>
+                        <a href="2.html"><i class="fas fa-chevron-right"></i></a>
                     </div>
                 </div>
                 <aside class="sidebar">
