--- a/index.html
+++ b/index.html
@@ -269,5 +269,6 @@ introductory workbooks.
     <script src="./js/main.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
     <script src="./js/aos.js"></script>
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </body>
 </html>
