--- a/2.html
+++ b/2.html
@@ -139,8 +139,8 @@
                     </div>
                     <hr>
                     <div class="pagination flex-row">
-                        <a href="#"><i class="fas fa-chevron-left"></i></a>
-                        <a href="#" class="pages">1</a>
+                        <a href="index.html"><i class="fas fa-chevron-left"></i></a>
+                        <a href="index.html" class="pages">1</a>
                         <a href="2.html" class="pages">2</a>
                         <a href="2.html"><i class="fas fa-chevron-right"></i></a>
                     </div>
