--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a href="#project">PROJECTS</a>
                     </li>
                     <li class="nav-link">
-                        <a href="#">SELF DRIVING CAR</a>
+                        <a href="car.html">SELF DRIVING CAR</a>
                     </li>
                     <li class="nav-link">
                         <a href="#ab">ABOUT US</a>
