--- a/car.html
+++ b/car.html
@@ -25,7 +25,7 @@
             <div>
                 <ul class="nav-items">
                     <li class="nav-link">
-                        <a href="#">HOME</a>
+                        <a href="index.html">HOME</a>
                     </li>
                     <li class="nav-link">
                         <a href="#res">RESUME</a>
