--- a/car.html
+++ b/car.html
@@ -95,14 +95,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h1 class="text-center" style="color: rgb(255,255,255);font-weight: 300;">Signboard Recognition</h1><img class="d-xl-flex justify-content-xl-center" style="text-align: center;margin-right: auto;margin-left: auto;width: 100%;height: auto;" src="assets/img/signboard_recognition.gif"></div>
+                    <h1 class="text-center" style="color: rgb(255,255,255);font-weight: 300;">Signboard Recognition</h1><img class="d-xl-flex justify-content-xl-center" style="text-align: center;margin-right: auto;margin-left: auto;width: 100%;height: auto;" src=".assets/img/signboard_recognition.gif"></div>
                 <div class="col-md-6">
-                    <h1 class="text-center" style="color: rgb(255,255,255);font-weight: 300;">Human Detection</h1><img class="d-xl-flex justify-content-xl-center" style="text-align: center;margin-right: auto;margin-left: auto;width: 100%;height: auto;" src="assets/img/human_recognition.gif"></div>
+                    <h1 class="text-center" style="color: rgb(255,255,255);font-weight: 300;">Human Detection</h1><img class="d-xl-flex justify-content-xl-center" style="text-align: center;margin-right: auto;margin-left: auto;width: 100%;height: auto;" src=".assets/img/human_recognition.gif"></div>
             </div>
         </div>
     </div>
     <section id="sensors_vfx" style="background-color: rgb(0,0,0);background-position: center;background-size: cover;background-repeat: no-repeat;">
-        <h1 style="color: rgb(255,255,255);padding-top: 50px;padding-bottom: 33px;font-weight: 300;font-size: 50px;">Sensing</h1><img class="d-xl-flex justify-content-xl-center" src="assets/img/car_vfx_sensors.png" style="width: 100vw;height: auto;margin-right: 0;margin-left: 0;"></section>
+        <h1 style="color: rgb(255,255,255);padding-top: 50px;padding-bottom: 33px;font-weight: 300;font-size: 50px;">Sensing</h1><img class="d-xl-flex justify-content-xl-center" src=".assets/img/car_vfx_sensors.png" style="width: 100vw;height: auto;margin-right: 0;margin-left: 0;"></section>
     <section id="sensors_2d-1" style="background-color: #c9d0f7;">
         <div class="container"><img class="d-sm-flex d-lg-flex d-xl-flex justify-content-sm-center justify-content-lg-center justify-content-xl-center" src="assets/img/car_sensors.png" style="width: 60vw;height: auto;padding-bottom: 40px;display: block;margin-left: auto;margin-right: auto;padding-top: 30px;"></div>
     </section>
@@ -112,17 +112,17 @@
                 <h2 class="text-center" style="font-weight: 300;margin-bottom: 40px;">Team </h2>
             </div>
             <div class="row people">
-                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="assets/img/sarath.jpeg">
+                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src=".assets/img/sarath.jpeg">
                     <h3 class="text-center name">Sarath Menon</h3>
                     <p class="text-center title" style="padding-bottom: 30px;">Team Lead</p>
                     <p class="text-center title" style="margin-bottom: -33px;"></p>
                 </div>
-                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="assets/img/sudhan.jpeg">
+                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src=".assets/img/sudhan.jpeg">
                     <h3 class="text-center name">Sudhan c</h3>
                     <p class="text-center title" style="margin-bottom: 0px;">Perception &amp;</p>
                     <p class="text-center title">Communication</p>
                 </div>
-                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="assets/img/rohin.jpeg">
+                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src=".assets/img/rohin.jpeg">
                     <h3 class="text-center name">Rohin Siddhartha</h3>
                     <p class="text-center title">Perception</p>
                 </div>
@@ -132,11 +132,11 @@
     <div class="team-clean" style="background-color: rgb(0,0,0);color: rgb(255,255,255);">
         <div class="container">
             <div class="row people">
-                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="assets/img/vidyasagar.jpeg">
+                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src=".assets/img/vidyasagar.jpeg">
                     <h3 class="text-center name">Vidyasagar</h3>
                     <p class="text-center title">design</p>
                 </div>
-                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="assets/img/niteesh.jpeg">
+                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src=".assets/img/niteesh.jpeg">
                     <h3 class="text-center name">Niteesh Kumar</h3>
                     <p class="text-center title">Simulation</p>
                 </div>
@@ -149,13 +149,13 @@
                 <h2 class="text-center" style="font-weight: 300;margin-bottom: 40px;margin-top: 30px;">Faculty</h2>
             </div>
             <div class="row people">
-                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="assets/img/vinod_sir.jpeg">
+                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src=".assets/img/vinod_sir.jpeg">
                     <h3 class="text-center name">Dr. B. Vinod</h3>
                 </div>
-                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="assets/img/sundaram_sir.jpeg">
+                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src=".assets/img/sundaram_sir.jpeg">
                     <h3 class="text-center name">Dr. Sundaram</h3>
                 </div>
-                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="assets/img/sakthi_sir.jpeg">
+                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src=".assets/img/sakthi_sir.jpeg">
                     <h3 class="text-center name">Prof. Sakthi Vignesh</h3>
                 </div>
             </div>
@@ -167,7 +167,7 @@
                 <h2 class="text-center" style="font-weight: 300;margin-bottom: 40px;margin-top: 60px;">Staff</h2>
             </div>
             <div class="row people">
-                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="assets/img/vijay_sir.jpg">
+                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src=".assets/img/vijay_sir.jpg">
                     <h3 class="text-center name">Vijay Kumar</h3>
                 </div>
             </div>
