--- a/car.html
+++ b/car.html
@@ -167,7 +167,7 @@
                 <h2 class="text-center" style="font-weight: 300;margin-bottom: 40px;margin-top: 60px;">Staff</h2>
             </div>
             <div class="row people">
-                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="./assets/img/vijay_sir.jpg">
+                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="./assets/img/vijay_sir.jpeg">
                     <h3 class="text-center name">Vijay Kumar</h3>
                 </div>
             </div>
